force-app/main/default/objects/Lead/fields/Company_HQ__c.field-meta.xml
<CustomField>
    <fullName>Company_HQ__c</fullName>
    <label>Company HQ</label>
    <length>18</length>
    <type>Text</type>
</CustomField>