force-app/main/default/objects/Lead/fields/Company_Image_Url__c.field-meta.xml
<CustomField>
    <fullName>Company_Image_Url__c</fullName>
    <label>Company Image Url</label>
    <type>Url</type>
</CustomField>