force-app/main/default/objects/Lead/fields/Content_Id__c.field-meta.xml
<CustomField>
    <fullName>Content_Id__c</fullName>
    <label>Content Id</label>
    <type>Url</type>
</CustomField>